--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
   <head>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RyanW117/hello-world">View on GitHub</a>
 
-          <h1 id="project_title">Hello-world</h1>
+          <h1 id="This is the Project Title">Hello-world</h1>
           <h2 id="project_tagline">tutorial thing</h2>
 
             <section id="downloads">
